--- a/index.html
+++ b/index.html
@@ -103,23 +103,24 @@
 								<div class="mobile-nav"></div>
 								<!-- End Mobile Nav -->
 							</div>
-							<div class="col-lg-7 col-md-9 col-12">
+							<div class="col-lg-7 col-md-9 col-12 col-xxl-6">
 								<!-- Main Menu -->
 								<div class="main-menu">
 									<nav class="navigation">
-										<ul class="nav menu">
+										<ul class="nav menu d-flex flex-nowrap">
 											<li class="active">
 												<a href="#">Home</a>
 											</li>
-											<li><a href="#who_we_are">Who we are? </a></li>
-											<li><a href="#">Locations <i class="icofont-rounded-down"></i></a>
+											<li><a href="#who_we_are">About KITES</a></li>
+											<li><a href="#">Communities Data <i class="icofont-rounded-down"></i></a>
 												<ul class="dropdown">
 													<li><a href="location-govind-puri.html">Govind Puri</a></li>
 													<li><a href="location-sangam-vihar.html">Sangam Vihar</a></li>
 													<li><a href="location-tughlakabad.html">Tughlakabad</a></li>
 												</ul>
 											</li>
-											<li><a href="#">Emergency Helpine Contact</a></li>
+											<li><a href="emergency_helpline_contact.html">Emergency Helpine Contact</a></li>
+											<li><a href="#">Reallocation Support</a></li>
 										</ul>
 									</nav>
 								</div>
@@ -127,7 +128,7 @@
 							</div>
 							<div class="col-lg-2 col-12">
 								<div class="get-quote">
-									<button class="language-button btn" id="languageToggle" onclick="toggleLanguage()">हिंदी</button>
+									<button class="language-button btn" id="languageToggle" style="margin-top:13px;" onclick="toggleLanguage()">हिंदी</button>
 
 								</div>
 							</div>
@@ -145,7 +146,7 @@
 		<section class="slider">
 			<div class="hero-slider">
 				<!-- Start Single Slider -->
-				<div class="single-slider" style="background-image:url('img/banner_1.jpg')">
+				<div class="single-slider" style="background-image:url('img/slider_2.jpg')">
 				</div>
 				<!-- End Single Slider -->
 				<!-- Start Single Slider -->
@@ -207,9 +208,8 @@
 			<div class="col-lg-6 col-12">
 				<!-- Start Choose Left -->
 				<div class="choose-left">
-					<h3>Who We Are</h3>
+					<h3>About KITES</h3>
 					<p><span style="font-weight:bold">Katha Information Technology and Entrepreneurship School (KITES)</span> has been working in Govindpuri for the past 24 years. KITES offers quality IT education to children as well as the youth from the communities to enhance opportunities for them. Working with British Telecommunications (BT), Katha has created a huge impact on children in slums.</p>
-					<a href="who_we_are.html">Read more</a>
 				</div>
 				<!-- End Choose Left -->
 			</div>
@@ -276,48 +276,139 @@
 			</div>
 		</section>
 				<!-- Start clients -->
-				<div class="clients overlay">
+				<div class="clients overlay" style="padding-top:30px;">
+					<div class="section-title" style="margin-bottom:0px;">
+						<h2 style="color:#ffcc00">Important Helpline Numbers</h2>
+					</div>
 					<div class="container">
 						<div class="row">
 							<div class="col-lg-12 col-md-12 col-12">
 								<div class="container-1">
 									<div class="small-box">
 										<div class="single-clients custom_code content" data-info="Details about Box 1">
-											National Commission <br/>for Women (NCW) Helpline<br/>
-											7827170170
-											<div class="extra-content">More info about Box 1</div>
+											Area SHO (PS Kalkaji)<br/>
+											011-26430607
+											<div class="extra-content"><a href="emergency_helpline_contact.html">More Info</a></div>
 										</div>
 									</div>
 									<div class="small-box">
 										<div class="single-clients custom_code content" data-info="Details about Box 1">
-											All-India Women<br/> Helpline<br/>
-											1091
-											<div class="extra-content">More info about Box 1</div>
+											Women Helpline<br/>
+											181, 1091
+											<div class="extra-content"><a href="emergency_helpline_contact.html">More Info</a></div>
 										</div>
 									</div>
 									<div class="small-box">
 										<div class="single-clients custom_code content" data-info="Details about Box 1">
-											Domestic Abuse<br/> Helpline<br/>
-											181
-											<div class="extra-content">More info about Box 1</div>
+											CHILD HELPLINE<br/>
+											1098
+											<div class="extra-content"><a href="emergency_helpline_contact.html">More Info</a></div>
 										</div>
 									</div>
 									<div class="small-box">
 										<div class="single-clients custom_code content" data-info="Details about Box 1">
-											Delhi Police Women<br/> Helpline<br/>
-											1091
-											<div class="extra-content">More info about Box 1</div>
+											DELHI POLICE<br/>
+											100
+											<div class="extra-content"><a href="emergency_helpline_contact.html">More Info</a></div>
 										</div>
 									</div>
 									<div class="small-box">
 										<div class="single-clients custom_code content" data-info="Details about Box 1">
-											Emergency Services<br/> Helpline<br/>
-											100, 112
-											<div class="extra-content">More info about Box 1</div>
+											CENTRALIZED EMERGENCY SERVICES<br/>
+											112
+											<div class="extra-content"><a href="emergency_helpline_contact.html">More Info</a></div>
 										</div>
 									</div>
 								</div>
 								
+							</div>
+						</div>
+					</div>
+					<br/>
+					<div class="container">
+						<div class="row">
+							<div class="col-lg-12 col-md-12 col-12">
+								<div class="container-1">
+									<div class="small-box">
+										<div class="single-clients custom_code content" data-info="Details about Box 1">
+											Fire Helpline<br/>
+											101
+											<div class="extra-content"><a href="emergency_helpline_contact.html">More Info</a></div>
+										</div>
+									</div>
+									<div class="small-box">
+										<div class="single-clients custom_code content" data-info="Details about Box 1">
+											Ambulance<br/>
+											102
+											<div class="extra-content"><a href="emergency_helpline_contact.html">More Info</a></div>
+										</div>
+									</div>
+									<div class="small-box">
+										<div class="single-clients custom_code content" data-info="Details about Box 1">
+											Disaster Managment<br/>
+											1077
+											<div class="extra-content"><a href="emergency_helpline_contact.html">More Info</a></div>
+										</div>
+									</div>
+									<div class="small-box">
+										<div class="single-clients custom_code content" data-info="Details about Box 1">
+											Cyber Crime Cell<br/>
+											100
+											<div class="extra-content"><a href="emergency_helpline_contact.html">More Info</a></div>
+										</div>
+									</div>
+									<div class="small-box">
+										<div class="single-clients custom_code content" data-info="Details about Box 1">
+											Obscence Calls/Stalking<br/>
+											1096/1090
+											<div class="extra-content"><a href="emergency_helpline_contact.html">More Info</a></div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<br/>
+					<div class="container">
+						<div class="row">
+							<div class="col-lg-12 col-md-12 col-12">
+								<div class="container-1">
+									<div class="small-box">
+										<div class="single-clients custom_code content" data-info="Details about Box 1">
+											All India Commission For Women<br/>
+											011-23389680,10921
+											<div class="extra-content"><a href="emergency_helpline_contact.html">More Info</a></div>
+										</div>
+									</div>
+									<div class="small-box">
+										<div class="single-clients custom_code content" data-info="Details about Box 1">
+											Drug De-Addiction Centre<br/>
+											1800110031
+											<div class="extra-content"><a href="emergency_helpline_contact.html">More Info</a></div>
+										</div>
+									</div>
+									<div class="small-box">
+										<div class="single-clients custom_code content" data-info="Details about Box 1">
+											Senior Citizen Helpline<br/>
+											1291
+											<div class="extra-content"><a href="emergency_helpline_contact.html">More Info</a></div>
+										</div>
+									</div>
+									<div class="small-box">
+										<div class="single-clients custom_code content" data-info="Details about Box 1">
+											Disability Helpline<br/>
+											0120-2500474/484/920
+											<div class="extra-content"><a href="emergency_helpline_contact.html">More Info</a></div>
+										</div>
+									</div>
+									<div class="small-box">
+										<div class="single-clients custom_code content" data-info="Details about Box 1">
+											Nearest Hospital (Batra)<br/>
+											011-29957486
+											<div class="extra-content"><a href="emergency_helpline_contact.html">More Info</a></div>
+										</div>
+									</div>
+								</div>
 							</div>
 						</div>
 					</div>
