--- a/index.html
+++ b/index.html
@@ -154,17 +154,7 @@
 				</div>
 				<!-- Start End Slider -->
 				<!-- Start Single Slider -->
-				<div class="single-slider" style="background-image:url('img/slider1.jpeg')">
-					<div class="container">
-						<div class="row">
-							<div class="col-lg-7">
-								<div class="text">
-									<h1>Empowering Girls as Navigators to Break the Poverty Trap</h1>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
+				<div class="single-slider" style="background-image:url('img/slider1.jpeg')"></div>
 				<!-- End Single Slider -->
 			</div>
 		</section>
@@ -184,7 +174,7 @@
 									</div> -->
 									<div class="single-content">
 										<h4 style="color:#F5D042">Need of the Project:</h4>
-										<p style="color:#F5D042">Many low-income families in areas like <span style="font-weight: bold;display:inline;color: #F5D042;">Govind Puri</span>, <span style="font-weight: bold;display:inline; color: #F5D042;">Sangam Vihar</span>, and <span style="font-weight: bold;display:inline; color: #F5D042">Tughlakabad</span> in Delhi desire to move to safer neighborhoods with better economic opportunities but face barriers such as lack of information, financial resources, and logistical support. The <span style="font-weight: bold;display:inline;color: #F5D042;">KITES</span> project aims to empower adolescent girls as navigators to assist these families in overcoming these barriers and accessing better living conditions, while integrating STEM education and skills development.</p>
+										<p style="color:#F5D042; font-size:18px;">Many low-income families in areas like <span style="font-weight: bold;display:inline;color: #F5D042;">Govind Puri</span>, <span style="font-weight: bold;display:inline; color: #F5D042;">Sangam Vihar</span>, and <span style="font-weight: bold;display:inline; color: #F5D042">Tughlakabad</span> in Delhi desire to move to safer neighborhoods with better economic opportunities but face barriers such as lack of information, financial resources, and logistical support. The <span style="font-weight: bold;display:inline;color: #F5D042;">KITES</span> project aims to empower adolescent girls as navigators to assist these families in overcoming these barriers and accessing better living conditions, while integrating STEM education and skills development.</p>
 									</div>
 								</div>
 							</div>
@@ -209,7 +199,8 @@
 				<!-- Start Choose Left -->
 				<div class="choose-left">
 					<h3>About KITES</h3>
-					<p><span style="font-weight:bold">Katha Information Technology and Entrepreneurship School (KITES)</span> has been working in Govindpuri for the past 24 years. KITES offers quality IT education to children as well as the youth from the communities to enhance opportunities for them. Working with British Telecommunications (BT), Katha has created a huge impact on children in slums.</p>
+					<p><span style="font-weight:bold">Katha Information Technology and Entrepreneurship School (KITES)</span> has been working in Govindpuri for the past 24 years. KITES offers quality IT education to children as well as the youth from the communities to enhance opportunities for them. Working with British Telecommunications (BT), Katha has created a huge impact on children in slums. <br/><a href="who_we_are.html" style="color:#000;font-size:16px;text-decoration: underline;">Read More</a></p>
+					
 				</div>
 				<!-- End Choose Left -->
 			</div>
@@ -288,35 +279,35 @@
 										<div class="single-clients custom_code content" data-info="Details about Box 1">
 											Area SHO (PS Kalkaji)<br/>
 											011-26430607
-											<div class="extra-content"><a href="emergency_helpline_contact.html">More Info</a></div>
+											<div class="extra-content"><a href="emergency_helpline_contact.html#delhi_police">More Info</a></div>
 										</div>
 									</div>
 									<div class="small-box">
 										<div class="single-clients custom_code content" data-info="Details about Box 1">
 											Women Helpline<br/>
 											181, 1091
-											<div class="extra-content"><a href="emergency_helpline_contact.html">More Info</a></div>
+											<div class="extra-content"><a href="emergency_helpline_contact.html#women_helpline">More Info</a></div>
 										</div>
 									</div>
 									<div class="small-box">
 										<div class="single-clients custom_code content" data-info="Details about Box 1">
 											CHILD HELPLINE<br/>
 											1098
-											<div class="extra-content"><a href="emergency_helpline_contact.html">More Info</a></div>
+											<div class="extra-content"><a href="emergency_helpline_contact.html#child_helpline">More Info</a></div>
 										</div>
 									</div>
 									<div class="small-box">
 										<div class="single-clients custom_code content" data-info="Details about Box 1">
 											DELHI POLICE<br/>
 											100
-											<div class="extra-content"><a href="emergency_helpline_contact.html">More Info</a></div>
+											<div class="extra-content"><a href="emergency_helpline_contact.html#delhi_police">More Info</a></div>
 										</div>
 									</div>
 									<div class="small-box">
 										<div class="single-clients custom_code content" data-info="Details about Box 1">
 											CENTRALIZED EMERGENCY SERVICES<br/>
 											112
-											<div class="extra-content"><a href="emergency_helpline_contact.html">More Info</a></div>
+											<div class="extra-content"><a href="emergency_helpline_contact.html#emergency_helpline">More Info</a></div>
 										</div>
 									</div>
 								</div>
@@ -333,35 +324,35 @@
 										<div class="single-clients custom_code content" data-info="Details about Box 1">
 											Fire Helpline<br/>
 											101
-											<div class="extra-content"><a href="emergency_helpline_contact.html">More Info</a></div>
+											<div class="extra-content"><a href="emergency_helpline_contact.html#fire_helpline">More Info</a></div>
 										</div>
 									</div>
 									<div class="small-box">
 										<div class="single-clients custom_code content" data-info="Details about Box 1">
 											Ambulance<br/>
 											102
-											<div class="extra-content"><a href="emergency_helpline_contact.html">More Info</a></div>
+											<div class="extra-content"><a href="emergency_helpline_contact.html#ambulance_helpline">More Info</a></div>
 										</div>
 									</div>
 									<div class="small-box">
 										<div class="single-clients custom_code content" data-info="Details about Box 1">
 											Disaster Managment<br/>
 											1077
-											<div class="extra-content"><a href="emergency_helpline_contact.html">More Info</a></div>
+											<div class="extra-content"><a href="emergency_helpline_contact.html#disaster_helpline">More Info</a></div>
 										</div>
 									</div>
 									<div class="small-box">
 										<div class="single-clients custom_code content" data-info="Details about Box 1">
 											Cyber Crime Cell<br/>
 											100
-											<div class="extra-content"><a href="emergency_helpline_contact.html">More Info</a></div>
+											<div class="extra-content"><a href="emergency_helpline_contact.html#cyber_helpline">More Info</a></div>
 										</div>
 									</div>
 									<div class="small-box">
 										<div class="single-clients custom_code content" data-info="Details about Box 1">
 											Obscence Calls/Stalking<br/>
 											1096/1090
-											<div class="extra-content"><a href="emergency_helpline_contact.html">More Info</a></div>
+											<div class="extra-content"><a href="emergency_helpline_contact.html#stalking_helpline">More Info</a></div>
 										</div>
 									</div>
 								</div>
@@ -377,35 +368,35 @@
 										<div class="single-clients custom_code content" data-info="Details about Box 1">
 											All India Commission For Women<br/>
 											011-23389680,10921
-											<div class="extra-content"><a href="emergency_helpline_contact.html">More Info</a></div>
+											<div class="extra-content"><a href="emergency_helpline_contact.html#NCW_helpline">More Info</a></div>
 										</div>
 									</div>
 									<div class="small-box">
 										<div class="single-clients custom_code content" data-info="Details about Box 1">
 											Drug De-Addiction Centre<br/>
-											1800110031
-											<div class="extra-content"><a href="emergency_helpline_contact.html">More Info</a></div>
+											1800-11-0031
+											<div class="extra-content"><a href="emergency_helpline_contact.html#drug_helpline">More Info</a></div>
 										</div>
 									</div>
 									<div class="small-box">
 										<div class="single-clients custom_code content" data-info="Details about Box 1">
 											Senior Citizen Helpline<br/>
 											1291
-											<div class="extra-content"><a href="emergency_helpline_contact.html">More Info</a></div>
+											<div class="extra-content"><a href="emergency_helpline_contact.html#senior_helpline">More Info</a></div>
 										</div>
 									</div>
 									<div class="small-box">
 										<div class="single-clients custom_code content" data-info="Details about Box 1">
 											Disability Helpline<br/>
-											0120-2500474/484/920
-											<div class="extra-content"><a href="emergency_helpline_contact.html">More Info</a></div>
+											14456
+											<div class="extra-content"><a href="emergency_helpline_contact.html#disability_helpline">More Info</a></div>
 										</div>
 									</div>
 									<div class="small-box">
 										<div class="single-clients custom_code content" data-info="Details about Box 1">
 											Nearest Hospital (Batra)<br/>
 											011-29957486
-											<div class="extra-content"><a href="emergency_helpline_contact.html">More Info</a></div>
+											<div class="extra-content"><a href="emergency_helpline_contact.html#batra_helpline">More Info</a></div>
 										</div>
 									</div>
 								</div>
