--- a/who_we_are.html
+++ b/who_we_are.html
@@ -43,11 +43,7 @@
         <link rel="stylesheet" href="css/responsive.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     	<style>
-        	body {
-            	background-color: #f8f9fa;
-            	font-family: 'Arial', sans-serif;
-        	}
-        	.container-box {
+        .container-box {
 				max-width: 800px;
 				margin: 20px auto;
 				padding: 20px;
@@ -143,11 +139,12 @@
 				font-size: 30px;
 				cursor: pointer;
 			}
-			
+			.main-menu a{
+				text-decoration:none;
+			}
 		</style>
     </head>
     <body>
-		
 		<!-- Header Area -->
 		<header class="header">
 			<!-- Header Inner -->
@@ -165,23 +162,24 @@
 								<div class="mobile-nav"></div>
 								<!-- End Mobile Nav -->
 							</div>
-							<div class="col-lg-7 col-md-9 col-12">
+							<div class="col-lg-7 col-md-9 col-12 col-xxl-6">
 								<!-- Main Menu -->
 								<div class="main-menu">
 									<nav class="navigation">
-										<ul class="nav menu">
+										<ul class="nav menu d-flex flex-nowrap">
 											<li class="active">
-												<a href="#" style="text-decoration:none">Home</a>
+												<a href="#">Home</a>
 											</li>
-											<li><a href="#who_we_are" style="text-decoration:none">Who we are? </a></li>
-											<li><a href="#" style="text-decoration:none">Locations <i class="icofont-rounded-down"></i></a>
+											<li><a href="#who_we_are">About KITES</a></li>
+											<li><a href="#">Communities Data <i class="icofont-rounded-down"></i></a>
 												<ul class="dropdown">
-													<li><a href="location-govind-puri.html" style="text-decoration:none">Govind Puri</a></li>
-													<li><a href="location-sangam-vihar.html" style="text-decoration:none">Sangam Vihar</a></li>
-													<li><a href="location-tughlakabad.html" style="text-decoration:none">Tughlakabad</a></li>
+													<li><a href="location-govind-puri.html">Govind Puri</a></li>
+													<li><a href="location-sangam-vihar.html">Sangam Vihar</a></li>
+													<li><a href="location-tughlakabad.html">Tughlakabad</a></li>
 												</ul>
 											</li>
-											<li><a href="#" style="text-decoration:none">Emergency Helpine Contact</a></li>
+											<li><a href="emergency_helpline_contact.html">Emergency Helpine Contact</a></li>
+											<li><a href="#">Reallocation Support</a></li>
 										</ul>
 									</nav>
 								</div>
@@ -189,7 +187,7 @@
 							</div>
 							<div class="col-lg-2 col-12">
 								<div class="get-quote">
-									<button class="language-button btn" id="languageToggle" onclick="toggleLanguage()">हिंदी</button>
+									<button class="language-button btn" id="languageToggle" style="margin-top:13px;" onclick="toggleLanguage()">हिंदी</button>
 
 								</div>
 							</div>
@@ -203,23 +201,16 @@
 		</header>
 		<!-- End Header Area -->
          <!-- Breadcrumbs -->
-         <div class="breadcrumbs overlay" id="imageDiv" style="background-image: url('img/about_us.jpg');">
-        </div>
+         <div class="breadcrumbs overlay" id="imageDiv" style="padding:0px">
+			<img src="img/KITES_1.jpg" style="width:100%;"/>
+		</div>
         <!-- End Breadcrumbs -->
          <!-- Start Portfolio Details Area -->
-		<section class="pf-details section">
+		<section class="pf-details section" style="padding-top:0px">
 			<div class="container">
 				<div class="row">
 					<div class="col-12">
 						<div class="inner-content">
-							<div class="image-slider">
-								<div class="pf-details-slider">
-									<img src="img/banner_1.jpg" alt="#">
-									<img src="img/slider.jpeg" alt="#">
-									<img src="img/slider1.jpeg" alt="#">
-                                    <img src="img/slider2.jpeg" alt="#">
-								</div>
-							</div>
 							<div class="body-text">
 								<h3>About Us</h3>
 								<p>Started in 1988 with a magazine for children from the underserved communities, Katha’s work spans the literacy to literature continuum. By seamlessly connecting grassroots work in education and urban resurgence, Katha brings children living in poverty into reading and quality education. Over the past three decades, through its many programmes, Katha has helped over one million children help themselves out of poverty.</p>
