--- a/location-sangam-vihar.html
+++ b/location-sangam-vihar.html
@@ -43,10 +43,7 @@
         <link rel="stylesheet" href="css/responsive.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     	<style>
-        	body {
-            	background-color: #f8f9fa;
-            	font-family: 'Arial', sans-serif;
-        	}
+        	
         	.container-box {
 				max-width: 800px;
 				margin: 20px auto;
@@ -143,11 +140,12 @@
 				font-size: 30px;
 				cursor: pointer;
 			}
-			
+			.main-menu a{
+				text-decoration:none;
+			}
 		</style>
     </head>
     <body>
-		
 		<!-- Header Area -->
 		<header class="header">
 			<!-- Header Inner -->
@@ -165,23 +163,24 @@
 								<div class="mobile-nav"></div>
 								<!-- End Mobile Nav -->
 							</div>
-							<div class="col-lg-7 col-md-9 col-12">
+							<div class="col-lg-7 col-md-9 col-12 col-xxl-6">
 								<!-- Main Menu -->
 								<div class="main-menu">
 									<nav class="navigation">
-										<ul class="nav menu">
+										<ul class="nav menu d-flex flex-nowrap">
 											<li class="active">
-												<a href="#" style="text-decoration:none">Home</a>
+												<a href="index.html">Home</a>
 											</li>
-											<li><a href="#who_we_are" style="text-decoration:none">Who we are? </a></li>
-											<li><a href="#" style="text-decoration:none">Locations <i class="icofont-rounded-down"></i></a>
+											<li><a href="who_we_are.html">About KITES</a></li>
+											<li><a href="#">Communities Data <i class="icofont-rounded-down"></i></a>
 												<ul class="dropdown">
-													<li><a href="location-govind-puri.html" style="text-decoration:none">Govind Puri</a></li>
-													<li><a href="location-sangam-vihar.html" style="text-decoration:none">Sangam Vihar</a></li>
-													<li><a href="location-tughlakabad.html" style="text-decoration:none">Tughlakabad</a></li>
+													<li><a href="location-govind-puri.html">Govind Puri</a></li>
+													<li><a href="location-sangam-vihar.html">Sangam Vihar</a></li>
+													<li><a href="location-tughlakabad.html">Tughlakabad</a></li>
 												</ul>
 											</li>
-											<li><a href="#" style="text-decoration:none">Emergency Helpine Contact</a></li>
+											<li><a href="emergency_helpline_contact.html">Emergency Helpine Contact</a></li>
+											<li><a href="#">Reallocation Support</a></li>
 										</ul>
 									</nav>
 								</div>
@@ -189,7 +188,7 @@
 							</div>
 							<div class="col-lg-2 col-12">
 								<div class="get-quote">
-									<button class="language-button btn" id="languageToggle" onclick="toggleLanguage()">हिंदी</button>
+									<button class="language-button btn" id="languageToggle" style="margin-top:13px;" onclick="toggleLanguage()">हिंदी</button>
 
 								</div>
 							</div>
