--- a/index.html
+++ b/index.html
@@ -40,49 +40,9 @@
 		<!-- Medipro CSS -->
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="style.css">
+		<link rel="stylesheet" href="custom.css">
         <link rel="stylesheet" href="css/responsive.css">
-		<style>
-			.logo {
-   				width: 200px; /* Set the visible width */
-    			height: 58px; /* Set the visible height */
-    			overflow: hidden;
-    			background-image: url('img\logo.png');
-    			background-size: 225px 225px; /* Keep the original size */
-    			background-position: -50px -50px; /* Adjust to show only a specific part */
-			}
-			.slider .single-slider h1{
-				background: rgba(0, 0, 0, 0.4); 
-				text-align:center;
-				color:#BBBF51;
-				padding:15px;
-			}
-			/* Hide the default Google Translate widget */
-			#google_translate_element {
-            	display: none !important;
-        	}
-
-        
-
-        /* Custom Language Button */
-        .language-button {
-            background-color: #ffcc00;
-            color: white;
-            padding: 10px 20px;
-            border: none;
-            border-radius: 5px;
-            font-size: 16px;
-            cursor: pointer;
-        }
-
-        /* Hover Effect */
-        .language-button:hover {
-            background-color: #fff;
-        }
-		.get-quote .btn:hover{
-			background:#fff;
-			color:#000;
-		}
-		</style>
+	
     </head>
     <body>
 		
@@ -189,12 +149,7 @@
 <!-- Start Why choose -->
 <section class="why-choose" style="padding-top:0px;padding-bottom: 10px;" id="who_we_are">
 	<div class="container">
-		<div class="row" style="background: #fff;
-		padding: 30px;
-		-webkit-box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.10);
-		-moz-box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.10);
-		box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.10);
-		border-radius: 8px;">
+		<div class="row about_div">
 			<div class="col-lg-6 col-12">
 				<!-- Start Choose Left -->
 				<div class="choose-left">
