--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 									<nav class="navigation">
 										<ul class="nav menu d-flex flex-nowrap">
 											<li class="active">
-												<a href="#">Home</a>
+												<a href="#"><i class="fa fa-home"></i></a>
 											</li>
 											<li><a href="#who_we_are">About KITES</a></li>
 											<li><a href="#">Communities Data <i class="icofont-rounded-down"></i></a>
