--- a/location-sangam-vihar.html
+++ b/location-sangam-vihar.html
@@ -69,7 +69,7 @@
 									<nav class="navigation">
 										<ul class="nav menu d-flex flex-nowrap">
 											<li class="active">
-												<a href="index.html">Home</a>
+												<a href="index.html"><i class="fa fa-home" style="font-size:20 px"></i></a>
 											</li>
 											<li><a href="who_we_are.html">About KITES</a></li>
 											<li><a href="#">Communities Data <i class="icofont-rounded-down"></i></a>
