--- a/emergency_helpline_contact.html
+++ b/emergency_helpline_contact.html
@@ -146,7 +146,7 @@ t<!doctype html>
 							</div>
 						</div>
 						<div class="toggle-item">
-							<h2 class="toggle-header"  id="emergency_helpline"><i class="fa fa-plus-circle"></i> CENTRALIZED EMERGENCY SERVICES <span style="float:right">(Dial: 112)</span></h2>
+							<h2 class="toggle-header"  id="emergency_helpline"><i class="fa fa-plus-circle"></i> Centralized Emergency Services <span style="float:right">(Dial: 112)</span></h2>
 							<div class="toggle-content">
 								<p>A centralized emergency services system, like the <strong>Emergency Response Support System (ERSS)</strong> in India, aims to provide a unified and efficient response to emergencies by consolidating emergency calls and dispatching resources through a single number, like 112. </p>
 								<h4><strong>Process Flow:</strong></h4>
