--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@
 							<div class="single-schedule middle">
 								<div class="inner">
 									<div class="single-content">
-										<h4 style="color:#F5D042">Need of the Project:</h4>
-										<p style="color:#F5D042; font-size:18px;">Many low-income families in areas like <span style="font-weight: bold;display:inline;color: #F5D042;">Govind Puri</span>, <span style="font-weight: bold;display:inline; color: #F5D042;">Sangam Vihar</span>, and <span style="font-weight: bold;display:inline; color: #F5D042">Tughlakabad</span> in Delhi desire to move to safer neighborhoods with better economic opportunities but face barriers such as lack of information, financial resources, and logistical support. The <span style="font-weight: bold;display:inline;color: #F5D042;">KITES</span> project aims to empower adolescent girls as navigators to assist these families in overcoming these barriers and accessing better living conditions, while integrating STEM education and skills development.</p>
+										<h4 style="color:#fff">Need of the Project:</h4>
+										<p style="color:#FFF; font-size:18px;">Many low-income families in areas like <span style="font-weight: bold;display:inline;color: #FFF;">Govind Puri</span>, <span style="font-weight: bold;display:inline; color: #FFF;">Sangam Vihar</span>, and <span style="font-weight: bold;display:inline; color: #FFF">Tughlakabad</span> in Delhi desire to move to safer neighborhoods with better economic opportunities but face barriers such as lack of information, financial resources, and logistical support. The <span style="font-weight: bold;display:inline;color: #FFF;">KITES</span> project aims to empower adolescent girls as navigators to assist these families in overcoming these barriers and accessing better living conditions, while integrating STEM education and skills development.</p>
 									</div>
 								</div>
 							</div>
