--- a/emergency_helpline_contact.html
+++ b/emergency_helpline_contact.html
@@ -40,8 +40,13 @@ t<!doctype html>
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/responsive.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-		<link rel="stylesheet" href="style.css">
-		<link rel="stylesheet" href="custom.css">
+	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="custom.css">
+	<style>
+		.toggle-content h4,li{
+			color:#000;
+		}	
+	</style>    
     </head>
     <body>
 		<!-- Header Area -->
