--- a/relocation.html
+++ b/relocation.html
@@ -1,1 +1,231 @@
+<!doctype html>
+<html class="no-js" lang="en">
+    <head>
+        <!-- Meta Tags -->
+		<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="keywords" content="Site keywords here">
+		<meta name="description" content="">
+		<meta name='copyright' content=''>
+		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+		
+		<!-- Title -->
+        <title>Empowering Girls as Navigators to Break the Poverty Trap</title>
+		
+		<!-- Favicon -->
+        <link rel="icon" href="img/favicon.png">
+		
+		<!-- Google Fonts -->
+		<link href="https://fonts.googleapis.com/css?family=Poppins:200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap" rel="stylesheet">
 
+		<!-- Bootstrap CSS -->
+		<link rel="stylesheet" href="css/bootstrap.min.css">
+		<!-- Nice Select CSS -->
+		<link rel="stylesheet" href="css/nice-select.css">
+		<!-- Font Awesome CSS -->
+        <link rel="stylesheet" href="css/font-awesome.min.css">
+		<!-- icofont CSS -->
+        <link rel="stylesheet" href="css/icofont.css">
+		<!-- Slicknav -->
+		<link rel="stylesheet" href="css/slicknav.min.css">
+		<!-- Owl Carousel CSS -->
+        <link rel="stylesheet" href="css/owl-carousel.css">
+		<!-- Datepicker CSS -->
+		<link rel="stylesheet" href="css/datepicker.css">
+		<!-- Animate CSS -->
+        <link rel="stylesheet" href="css/animate.min.css">
+		<!-- Magnific Popup CSS -->
+        <link rel="stylesheet" href="css/magnific-popup.css">
+		
+		<!-- Medipro CSS -->
+        <link rel="stylesheet" href="css/normalize.css">
+        <link rel="stylesheet" href="style.css">
+		<link rel="stylesheet" href="custom.css">
+        <link rel="stylesheet" href="css/responsive.css">
+	
+    </head>
+    <body>
+		
+		<!-- Header Area -->
+		<header class="header">
+			<!-- Header Inner -->
+			<div class="header-inner">
+				<div class="container">
+					<div class="inner">
+						<div class="row">
+							<div class="col-lg-3 col-md-3 col-12">
+								<!-- Start Logo -->
+								<div class="logo">
+									<a href="index.html"><img src="img/logo.png" alt="#"></a>
+								</div>
+								<!-- End Logo -->
+								<!-- Mobile Nav -->
+								<div class="mobile-nav"></div>
+								<!-- End Mobile Nav -->
+							</div>
+							<div class="col-lg-7 col-md-9 col-12 col-xxl-6">
+								<!-- Main Menu -->
+								<div class="main-menu">
+									<nav class="navigation">
+										<ul class="nav menu d-flex flex-nowrap">
+											<li class="active">
+												<a href="#"><i class="fa fa-home" style="font-size:20 px"></i></a>
+											</li>
+											<li><a href="#who_we_are">About KITES</a></li>
+											<li><a href="#">Communities Data <i class="icofont-rounded-down"></i></a>
+												<ul class="dropdown">
+													<li><a href="location-govind-puri.html">Govind Puri</a></li>
+													<li><a href="location-sangam-vihar.html">Sangam Vihar</a></li>
+													<li><a href="location-tughlakabad.html">Tughlakabad</a></li>
+												</ul>
+											</li>
+											<li><a href="emergency_helpline_contact.html">Emergency Helpine Contact</a></li>
+											<li><a href="#">Reallocation Support</a></li>
+										</ul>
+									</nav>
+								</div>
+								<!--/ End Main Menu -->
+							</div>
+							<div class="col-lg-2 col-12">
+								<div class="get-quote">
+									<button class="language-button btn" id="languageToggle" style="margin-top:13px;" onclick="toggleLanguage()">हिंदी</button>
+
+								</div>
+							</div>
+							<!-- Google Translate Widget (Hidden) -->
+    						<div id="google_translate_element"></div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<!--/ End Header Inner -->
+		</header>
+		<!-- End Header Area -->
+		<!-- Error Page -->
+		<section class="error-page section">
+			<div class="container">
+				<div class="row">
+					<div class="col-lg-6 offset-lg-3 col-12">
+						<!-- Error Inner -->
+						<div class="error-inner">
+							<h1>404<span>Oop's  sorry we can't find that page!</span></h1>
+							<p>Aenean eget sollicitudin lorem, et pretium felis. Nullam euismod diam libero, sed dapibus leo laoreet ut. Suspendisse potenti. Phasellus urna lacus</p>
+							<form class="search-form">
+								<input placeholder="Search from Here" type="text">
+								<button class="btn" type="submit"><i class="fa fa-search"></i></button>
+							</form>
+						</div>
+						<!--/ End Error Inner -->
+					</div>
+				</div>
+			</div>
+		</section>	
+		<!--/ End Error Page -->
+				<!-- Footer Area -->
+				<footer id="footer" class="footer ">
+					<!-- Copyright -->
+					<div class="copyright">
+						<div class="container">
+							<div class="row">
+								<div class="col-lg-8 col-12">
+									<div class="copyright-content">
+										<p>© Copyright 2024. All Rights Reserved.</p>
+									</div>
+								</div>
+								<div class="col-lg-3 col-md-6 col-12">
+									<div class="single-footer">
+										<ul class="social">
+											<li><a href="#"><i class="icofont-facebook"></i></a></li>
+											<li><a href="#"><i class="icofont-google-plus"></i></a></li>
+											<li><a href="#"><i class="icofont-twitter"></i></a></li>
+											<li><a href="#"><i class="icofont-vimeo"></i></a></li>
+											<li><a href="#"><i class="icofont-pinterest"></i></a></li>
+										</ul>
+										<!-- End Social -->
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<!--/ End Copyright -->
+				</footer>
+				<!--/ End Footer Area -->
+					
+		<!--/ End Feautes -->
+		<!-- jquery Min JS -->
+        <script src="js/jquery.min.js"></script>
+		<!-- jquery Migrate JS -->
+		<script src="js/jquery-migrate-3.0.0.js"></script>
+		<!-- jquery Ui JS -->
+		<script src="js/jquery-ui.min.js"></script>
+		<!-- Easing JS -->
+        <script src="js/easing.js"></script>
+		<!-- Color JS -->
+		<script src="js/colors.js"></script>
+		<!-- Popper JS -->
+		<script src="js/popper.min.js"></script>
+		<!-- Bootstrap Datepicker JS -->
+		<script src="js/bootstrap-datepicker.js"></script>
+		<!-- Jquery Nav JS -->
+        <script src="js/jquery.nav.js"></script>
+		<!-- Slicknav JS -->
+		<script src="js/slicknav.min.js"></script>
+		<!-- ScrollUp JS -->
+        <script src="js/jquery.scrollUp.min.js"></script>
+		<!-- Niceselect JS -->
+		<script src="js/niceselect.js"></script>
+		<!-- Tilt Jquery JS -->
+		<script src="js/tilt.jquery.min.js"></script>
+		<!-- Owl Carousel JS -->
+        <script src="js/owl-carousel.js"></script>
+		<!-- counterup JS -->
+		<script src="js/jquery.counterup.min.js"></script>
+		<!-- Steller JS -->
+		<script src="js/steller.js"></script>
+		<!-- Wow JS -->
+		<script src="js/wow.min.js"></script>
+		<!-- Magnific Popup JS -->
+		<script src="js/jquery.magnific-popup.min.js"></script>
+		<!-- Counter Up CDN JS -->
+		<script src="http://cdnjs.cloudflare.com/ajax/libs/waypoints/2.0.3/waypoints.min.js"></script>
+		<!-- Bootstrap JS -->
+		<script src="js/bootstrap.min.js"></script>
+		<!-- Main JS -->
+		<script src="js/main.js"></script>
+		<!-- Google Translate API Script -->
+		<script type="text/javascript">
+			function googleTranslateElementInit() {
+				new google.translate.TranslateElement({ pageLanguage: 'en', autoDisplay: false }, 'google_translate_element');
+			}
+		</script>
+	
+		<script type="text/javascript" 
+			src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit">
+		</script>
+	
+		<!-- JavaScript for Custom Language Toggle -->
+		<script>
+			function toggleLanguage() {
+				var button = document.getElementById("languageToggle");
+				var googleTranslate = document.querySelector(".goog-te-combo");
+	
+				if (!googleTranslate) {
+					alert("Google Translate is still loading. Please try again.");
+					return;
+				}
+	
+				// Toggle between English & Hindi
+				if (button.innerText === "हिंदी") {
+					googleTranslate.value = "hi";
+					button.innerText = "English"; // Update button text
+				} else {
+					googleTranslate.value = "en";
+					button.innerText = "हिंदी"; // Update button text
+				}
+	
+				// Trigger translation
+				googleTranslate.dispatchEvent(new Event("change"));
+			}
+		</script>
+    </body>
+</html>
