--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 												</ul>
 											</li>
 											<li><a href="emergency_helpline_contact.html">Emergency Helpine Contact</a></li>
-											<li><a href="#">Reallocation Support</a></li>
+											<li><a href="relocation.html">Reallocation Support</a></li>
 										</ul>
 									</nav>
 								</div>
