--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
 											<li><a href="#who_we_are">About KITES</a></li>
 											<li><a href="#">Communities Data <i class="icofont-rounded-down"></i></a>
 												<ul class="dropdown">
-													<li><a href="location-govind-puri.html">Govind Puri</a></li>
-													<li><a href="location-sangam-vihar.html">Sangam Vihar</a></li>
-													<li><a href="location-tughlakabad.html">Tughlakabad</a></li>
+													<li><a href="location-govind-puri.html">Govind Puri Communitity Data</a></li>
+													<li><a href="location-sangam-vihar.html">Sangam Vihar Communitity Data</a></li>
+													<li><a href="location-tughlakabad.html">Tughlakabad Communitity Data</a></li>
 												</ul>
 											</li>
 											<li><a href="emergency_helpline_contact.html">Emergency Helpine Contact</a></li>
@@ -183,7 +183,7 @@
 				box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.10);
 				border-radius: 8px;">
 				<div class="section-title" style="margin-bottom:0px">
-					<h2>We Are Always Ready to Help You &amp; Your Family</h2>
+					<h2>We Are Ready to Help you access data of 3 Communities for Relocation</h2>
 				</div>
 					<div class="col-lg-4 col-12">
 						<!-- Start Single features -->
